ingress/host-based-routing/dev-namespace/dev-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-deploy
spec:
  selector:
    matchLabels:
      app: my-app  
  replicas: 2
  template: 
    metadata: 
      labels:  
        app: my-app 
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: my-app
        image: vinsdocker/k8s-app:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dev-service
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 80
